Add and update props in user identity class, add user dbSet in AppDbContext, add new migration, update the location of the user identity file with respect to the namespace

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -21,4 +21,11 @@
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\User\Commands\Hanlders\" />
+    <Folder Include="Features\User\Commands\Models\" />
+    <Folder Include="Features\User\Queries\Hanlders\" />
+    <Folder Include="Features\User\Queries\Models\" />
+  </ItemGroup>
+
 </Project>
