Add mapping from AddUserCommand to User, Create the identity controller, Create identity routing,change the User folder to ApplicationUser, add more localization keys, allow white spaces in user name,

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -22,8 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\User\Queries\Hanlders\" />
-    <Folder Include="Features\User\Queries\Models\" />
+    <Folder Include="Features\ApplicationUser\Queries\Hanlders\" />
+    <Folder Include="Features\ApplicationUser\Queries\Models\" />
+    <Folder Include="Mapping\ApplicationUserMapping\QueryMapping\" />
   </ItemGroup>
 
 </Project>
