add SendEmailService, fix check email address validator, and update the Fail response handler to accept an optional message

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Authentication\Command\Responses\" />
+    <Folder Include="Features\Emails\Queries\" />
   </ItemGroup>
 
 </Project>
