add the email settings to the appsettings.json, and bind them with the emailSetting

--- a/SchoolProject.API/appsettings.json
+++ b/SchoolProject.API/appsettings.json
@@ -19,5 +19,15 @@
     "validateIssuerSigningKey": true,
     "AccessTokenExpireDate": 1,
     "RefreshTokenExpireDate": 2
+  },
+  "emailSettings": {
+    "ClientConnectionString": "smtp.gmail.com",
+    "ClientConnectionPort": 465,
+    "ClientConnectionUseSSL": true,
+    "AuthenticationEmail": "mazenahmedsaleh206@gmail.com",
+    "AuthenticationPassword": "tyxn awrd xrdo ocbk",
+    "BodyBuilderTextBody": "This is my first email by Dot Net",
+    "MailBoxSenderHeader": "Future School",
+    "MailBoxSubject": "Welcome to Future School"
   }
 }
